--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,37 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #222;
+  color: #fff;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 .app {
   text-align: center;
-}
-
-.logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 100%;
 }
 
 .header {
-  background-color: #222;
+  background-color: #333;
   padding: 20px;
-  color: white;
 }
 
-.title {
-  font-size: 1.5em;
+.image-container {
+  /*margin: 20px;*/
+  height: 100%;
 }
 
-.intro {
-  font-size: large;
+.image-container > img {
+  border: 1px solid #333;
+  width: auto;
+  height: 100%;
 }
-
